--- a/index.html
+++ b/index.html
@@ -809,6 +809,11 @@
                     <div class="year">2014</div>
                     <p>Gold Medal for The Laboratory Experimenter Robot with Network Ability</p>
                 </div>
+                <div class="award-card fade-in delay-2">
+                    <h3>12th International Innovation Exhibition ARCA</h3>
+                    <div class="year">2014</div>
+                    <p>Silver Medal for Smart Shoes with Analyzer System</p>
+                </div>
                 <div class="award-card fade-in delay-3">
                     <h3>Eminent Young of Year</h3>
                     <div class="year">2014</div>
