--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             line-height: 1.6;
             color: var(--text-color);
-            background-color: #f8f9fa;
+            background: linear-gradient(135deg, #f3f4f6, #e5e7eb);
         }
         
         .container {
@@ -577,7 +577,7 @@
                 <div class="edu-item fade-in delay-1">
                     <img src="https://media.licdn.com/dms/image/v2/C4E0BAQFPjyj7jfxCCg/company-logo_100_100/company-logo_100_100/0/1635066103194?e=1762387200&v=beta&t=WDrMbtb7KvwzMbbLVVx59Soq9mIak12h3lP3aYKr6GY" alt="Azerbaijan Medical University" class="edu-logo">
                     <div class="edu-content">
-                        <h3>Azerbaijan Medical University</h3>
+                        <h3><a href="https://amu.edu.az/?local=1760997138" target="_blank" rel="noopener" style="color: var(--primary-color); text-decoration: none;">Azerbaijan Medical University</a></h3>
                         <div class="date">2016-2022</div>
                         <p>DMD. Dentistry (in English) - GPA: 92.48/100</p>
                     </div>
@@ -585,7 +585,7 @@
                 <div class="edu-item fade-in delay-2">
                     <img src="https://media.licdn.com/dms/image/v2/C4D0BAQGP-Vwe2-KKXg/company-logo_100_100/company-logo_100_100/0/1630454766420?e=1762387200&v=beta&t=1XsGtvYyfyRmCOYFRWdVvJm_s2mjPhPn5F13iCy7Yck" alt="Azad University of Tabriz" class="edu-logo">
                     <div class="edu-content">
-                        <h3>Azad University of Tabriz</h3>
+                        <h3><a href="https://tabriz.iau.ir/intl/en" target="_blank" rel="noopener" style="color: var(--primary-color); text-decoration: none;">Azad University of Tabriz</a></h3>
                         <div class="date">2013-2016</div>
                         <p>Bachelor's of Biomedical Engineering - GPA: 15.38/20</p>
                     </div>
@@ -774,24 +774,24 @@
             <h2 class="section-title">Research & Publications</h2>
             <div class="awards-container">
                 <div class="award-card fade-in delay-1">
-                    <h3>Lidocaine-Induced Conduction Block</h3>
+                    <h3>A Biophysical Simulation Framework for Investigating Lidocaine-Induced Conduction Block in Trigeminal Aβ and Aδ Fibers</h3>
                     <div class="year">2025</div>
-                    <p>1st International and 2nd National Conference on Cell and Developmental Biology, Kharazmi University, Tehran, Iran</p>
-                </div>
-                <div class="award-card fade-in delay-2">
-                    <h3>Biophysical Simulation Framework</h3>
-                    <div class="year">2025</div>
-                    <p>Investigating Lidocaine-Induced Conduction Block in Trigeminal Aβ and Aδ Fibers</p>
+                    <p>1st International and 2nd National Conference on Cell and Developmental Biology of Iran- Kharazmi University, Tehran, Iran 16-17 October 2025, Orally Presented · Oct 17, 2025</p>
                 </div>
                 <div class="award-card fade-in delay-3">
                     <h3>Undergraduate Thesis</h3>
                     <div class="year">2016</div>
-                    <p>Design of EMG Activated Robotic Lower Limb Exoskeleton</p>
+                    <p>Design of EMG Activated Robotic Lower Limb Exoskeleton: Undergraduate Thesis for BSc.Biomedical Engineering at Azad University of Tabriz</p>
+                </div>
+                <div class="award-card fade-in delay-2">
+                    <h3>Modeling of Brain Metabolism Energy for Diagnosis Cortical Spreading Depression by Matlab Simulink</h3>
+                    <div class="year">2015</div>
+                    <p>IEEE-2015 Conference on Knowledge-Based Engineering and Innovation (KBEI)" · Nov 5, 2015</p>
                 </div>
                 <div class="award-card fade-in delay-4">
-                    <h3>Modeling of Brain Metabolism Energy</h3>
-                    <div class="year">2015</div>
-                    <p>IEEE International Conference on Knowledge-Based Engineering and Innovation, Tehran, Iran</p>
+                    <h3>Critique of Electro Active Polymers and Making Mini Muscles From Electro Active Polymers</h3>
+                    <div class="year">2014</div>
+                    <p>8th Symposium on Advances in Science & Technology SASTECH Commission-IV: New Achievements in Electrical Engineering(NAEENG) · Feb 24, 2014</p>
                 </div>
             </div>
         </section>
