--- a/index.html
+++ b/index.html
@@ -554,6 +554,9 @@
                 <a href="https://orcid.org/0009-0001-0011-6076" class="social-link" target="_blank" aria-label="ORCID">
                     <i class="fab fa-orcid"></i>
                 </a>
+                <a href="https://www.researchgate.net/profile/Faraz-Jalilzadeh-Zehtab/research" class="social-link" target="_blank" aria-label="ORCID">
+                    <i class="fab fa-researchgate"></i>
+                </a>
             </div>
         </div>
     </header>
